activity info driver

--- a/app/src/main/res/layout/activity_info_driver.xml
+++ b/app/src/main/res/layout/activity_info_driver.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/text_info"
-        android:layout_width="240dp"
+        android:layout_width="match_parent"
         android:layout_height="55dp"
         android:gravity="center"
         android:text="Info on driver"
@@ -32,24 +32,25 @@
 
     <TextView
         android:id="@+id/textName2"
-        android:layout_width="191dp"
+        android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="150dp"
         android:gravity="center"
         android:text="..."
         android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.905"
-        app:layout_constraintLeft_toLeftOf="@+id/textName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintHorizontal_bias="0.809"
+        app:layout_constraintStart_toEndOf="@+id/textName"
+        app:layout_constraintTop_toTopOf="@+id/textName" />
 
     <TextView
         android:id="@+id/textNationality2"
-        android:layout_width="191dp"
+        android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="150dp"
         android:gravity="center"
         android:text="..."
         android:textColor="@color/white"
@@ -63,13 +64,13 @@
         android:id="@+id/textInformation"
         android:layout_width="110dp"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
         android:gravity="center"
         android:text="Infomation :"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.12"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDOB" />
 
@@ -77,21 +78,22 @@
         android:id="@+id/textNumber"
         android:layout_width="110dp"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
         android:gravity="center"
         android:text="Number :"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.12"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textName" />
 
     <TextView
         android:id="@+id/textNumber2"
-        android:layout_width="191dp"
+        android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="150dp"
         android:gravity="center"
         android:text="..."
         android:textColor="@color/white"
@@ -105,13 +107,13 @@
         android:id="@+id/textDOB"
         android:layout_width="110dp"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
         android:gravity="center"
         android:text="DOB :"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.12"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textNationality" />
 
@@ -119,21 +121,23 @@
         android:id="@+id/textName"
         android:layout_width="110dp"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="28dp"
         android:gravity="center"
         android:text="@string/name2"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.12"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/textInformation2"
-        android:layout_width="189dp"
+        android:layout_width="match_parent"
         android:layout_height="79dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="150dp"
         android:gravity="center"
         android:text="..."
         android:textColor="@color/white"
@@ -147,21 +151,22 @@
         android:id="@+id/textNationality"
         android:layout_width="110dp"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
         android:gravity="center"
         android:text="Nationality :"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.12"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textNumber" />
 
     <TextView
         android:id="@+id/textDOB2"
-        android:layout_width="191dp"
+        android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="150dp"
         android:gravity="center"
         android:text="..."
         android:textColor="@color/white"
@@ -173,18 +178,37 @@
 
     <Button
         android:id="@+id/btnAdd"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:background="@drawable/text_view_border_white"
+        android:padding="5dp"
         android:shadowColor="@color/black"
         android:text="ADD to compare"
-        android:padding="5dp"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInformation2" />
+        app:layout_constraintTop_toBottomOf="@+id/textInformation2"
+        app:layout_constraintVertical_bias="0.157" />
+
+    <Button
+        android:id="@+id/btnback5"
+        android:layout_width="match_parent"
+        android:layout_height="43dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="30dp"
+        android:backgroundTint="@color/white"
+        android:shadowColor="@color/black"
+        android:text="Back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
