--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
     <View
         android:id="@+id/view_head_main"
-        android:layout_width="411dp"
+        android:layout_width="match_parent"
         android:layout_height="215dp"
         android:background="@color/red"
         app:layout_constraintCircleRadius="50dp"
@@ -21,9 +21,10 @@
     <TextView
 
         android:id="@+id/textView6"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:gravity="center"
         android:text="F1 Simulator"
         android:textColor="@color/white"
         android:textSize="30dp"
@@ -36,19 +37,21 @@
         android:id="@+id/imageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/ic_dry_clean"
         android:foreground="@drawable/ic_f1_logo"
         app:layout_constraintEnd_toEndOf="@+id/view_head_main"
-        app:layout_constraintHorizontal_bias="0.471"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <Button
         android:id="@+id/btnlastcircuit"
-        android:layout_width="325dp"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginTop="172dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
         android:backgroundTint="@color/light_black"
         android:shadowColor="@color/white"
         android:textStyle="bold"
@@ -64,9 +67,11 @@
 
     <Button
         android:id="@+id/btncompare"
-        android:layout_width="325dp"
+        android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginTop="20dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
         android:backgroundTint="@color/red"
         android:textColor="@color/white"
         android:textStyle="bold"
@@ -83,9 +88,11 @@
 
     <Button
         android:id="@+id/btnsearch_driver"
-        android:layout_width="325dp"
+        android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginTop="20dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
         android:backgroundTint="@color/red"
         android:textColor="@color/white"
         android:textStyle="bold"
@@ -102,9 +109,11 @@
 
     <Button
         android:id="@+id/btnsearch_circuits"
-        android:layout_width="325dp"
+        android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginTop="20dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
         android:backgroundTint="@color/red"
         android:shadowColor="@color/black"
         android:textColor="@color/white"
