--- a/app/src/main/res/layout/fragment_driver_result_.xml
+++ b/app/src/main/res/layout/fragment_driver_result_.xml
@@ -6,18 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".activities.Fragment_DriverResult">
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:background="#E6000000"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/list_DriverInfo"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_height="match_parent"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +31,7 @@
         android:id="@+id/textView13"
         android:layout_width="67dp"
         android:layout_height="33dp"
-        android:layout_marginStart="216dp"
+        android:layout_marginStart="208dp"
         android:gravity="center"
         android:text="Lastname"
         android:textColor="@color/white"
@@ -51,7 +44,7 @@
         android:id="@+id/textView12"
         android:layout_width="67dp"
         android:layout_height="33dp"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="88dp"
         android:gravity="center"
         android:text="Firstname"
         android:textColor="@color/white"
@@ -64,13 +57,13 @@
         android:id="@+id/textView14"
         android:layout_width="67dp"
         android:layout_height="33dp"
-        android:layout_marginStart="344dp"
+        android:layout_marginRight="15dp"
         android:gravity="center"
         android:text="Points"
         android:textColor="@color/white"
         android:textSize="15sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/textView15"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
