--- a/app/src/main/res/layout/textviewlayout_circuits.xml
+++ b/app/src/main/res/layout/textviewlayout_circuits.xml
@@ -8,9 +8,11 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="290dp"
+        android:layout_width="match_parent"
         android:layout_height="55dp"
         android:layout_marginTop="24dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
         android:background="@color/red"
         android:gravity="center"
         android:text=""
