--- a/app/src/main/res/layout/textviewlayout_driver.xml
+++ b/app/src/main/res/layout/textviewlayout_driver.xml
@@ -8,9 +8,11 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="280dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
         android:background="@color/red"
         android:drawableRight="@drawable/ic_right_arrow_white"
         android:gravity="center"
