--- a/app/src/main/res/layout/textviewlayout_universal.xml
+++ b/app/src/main/res/layout/textviewlayout_universal.xml
@@ -7,9 +7,11 @@
 
     <TextView
         android:id="@+id/textView_universal"
-        android:layout_width="280dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
         android:background="@color/red"
         android:gravity="center"
         android:paddingRight="15dp"
